// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Application Context is not obscured: development context generally matches this snapshot 1`] = `
Object {
  "app": Object {
    "description": "Criticide Probability Engine Desktop Application.",
    "experimentalFeatures": true,
    "name": "criticide",
    "productName": "Criticide",
    "released": "Mon Jun 05 2017 14:19:31 GMT+1000 (AEST)",
    "rollBarMain": "b6cedc15e5b94d88a74cd6f0cbf579e5",
    "rollBarRenderer": "2509240345f14c718038f8a7018c11a9",
    "scrollBounce": true,
    "updateUrl": "www.criticide.com/some/path/to/feed/url",
    "version": "0.0.1",
    "windowDefaultHeight": 800,
    "windowDefaultWidth": 1024,
    "windowMainContent": "startup/index.html",
    "windowMinHeight": 600,
    "windowMinWidth": 1024,
    "windowTitle": "Criticide",
  },
  "isRunningOnLinux": true,
  "isRunningOnMac": false,
  "isRunningOnWin": false,
  "logger": Object {
    "debug": [Function],
    "default": [Circular],
    "error": [Function],
    "info": [Function],
    "log": [Function],
    "silly": [Function],
    "transports": Object {
      "console": [Function],
      "file": [Function],
      "logS": [Function],
      "rendererConsole": [Function],
    },
    "verbose": [Function],
    "warn": [Function],
  },
  "path": Object {
    "appFiles": "/usr/local/userData",
    "configData": "/usr/local/appData",
    "dataFiles": "/usr/applications",
    "documents": "/usr/local/documents",
    "downloads": "/usr/local/downloads",
    "home": "usr/resources",
    "resources": "usr/temp",
    "tempData": "/usr",
  },
  "platform": Object {
    "chromeVersion": "56.0.2924.87",
    "devMode": true,
    "electronVersion": "1.6.10",
    "macStoreBuild": false,
    "os": "linux",
    "processor": "x64",
    "winStoreBuild": false,
  },
}
`;

exports[`Application Context is not obscured: production context generally matches this snapshot 1`] = `
Object {
  "app": Object {
    "description": "Criticide Probability Engine Desktop Application.",
    "experimentalFeatures": true,
    "name": "criticide",
    "productName": "Criticide",
    "released": "Mon Jun 05 2017 14:19:31 GMT+1000 (AEST)",
    "rollBarMain": "b6cedc15e5b94d88a74cd6f0cbf579e5",
    "rollBarRenderer": "2509240345f14c718038f8a7018c11a9",
    "scrollBounce": true,
    "updateUrl": "www.criticide.com/some/path/to/feed/url",
    "version": "0.0.1",
    "windowDefaultHeight": 800,
    "windowDefaultWidth": 1024,
    "windowMainContent": "startup/index.html",
    "windowMinHeight": 600,
    "windowMinWidth": 1024,
    "windowTitle": "Criticide",
  },
  "isRunningOnLinux": true,
  "isRunningOnMac": false,
  "isRunningOnWin": false,
  "logger": Object {
    "debug": [Function],
    "default": [Circular],
    "error": [Function],
    "info": [Function],
    "log": [Function],
    "silly": [Function],
    "transports": Object {
      "console": [Function],
      "file": [Function],
      "logS": [Function],
      "rendererConsole": [Function],
    },
    "verbose": [Function],
    "warn": [Function],
  },
  "path": Object {
    "appFiles": "/usr/local/userData",
    "configData": "/usr/local/appData",
    "dataFiles": "/usr/applications",
    "documents": "/usr/local/documents",
    "downloads": "/usr/local/downloads",
    "home": "usr/resources",
    "resources": "usr/temp",
    "tempData": "/usr",
  },
  "platform": Object {
    "chromeVersion": "56.0.2924.87",
    "devMode": false,
    "electronVersion": "1.6.10",
    "macStoreBuild": false,
    "os": "linux",
    "processor": "x64",
    "winStoreBuild": false,
  },
}
`;
